# arcadia

./: LICENSE  README.md  README.pt-BR.md  TODO  executar.ipynb  play.ipynb  pyproject.toml
arcadia/models/: __init__.py  amadeus_verbo.py  gaia.py  teeny_tiny_llama.py  tucano.py
arcadia/models/api/: _model.py  decoder.py
docs/: ADDING_MODELS.md  API.md
ricklm/: __init__.py  models.py
ricklm/features/models/: __init__.py
ricklm/features/poems/: prompt.py
ricklm/shared/models/: capabilities.py
