[project]
name = "lasic-arcadia"
version = "2.1.1"
description = "Notebook and library for quickly testing Portuguese-friendly LLMs on Google Colab and Kaggle."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "RickBarretto", email = "78623871+RickBarretto@users.noreply.github.com" },
]
maintainers = [
    { name = "Intelligent and Cognitive Systems Lab, UEFS" },
    { name = "RickBarretto", email = "78623871+RickBarretto@users.noreply.github.com" },
]
dependencies = [
    "attrs>=25.4.0",
    "transformers>=5.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
